@@ -1,5 +1,8 @@
 2001-08-09  Arturo Espinosa Aldama  <arturo@ximian.com>
 
+	* ishare.pl.in (xst_ishare_fwrules_get_ipchains): Small
+	correction to "configured" ipchains tag.
+
 	* xml.pl.in (xst_xml_print_array): Use xst_xml_print_structure.
 	(xst_xml_print_hash): same.
 	(xst_xml_print_structure): Call the corresponding function
